objects/LLC_BI__Spread__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is populated automatically whenever Collateral is selected for CRE analysis in Spreads. This field specifies the Collateral associated with the Spread.</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Spreads</relationshipLabel>
        <relationshipName>Spreads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity_Involvement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required and automatically updated. Look up to the legal entity.</description>
        <label>Entity Involvement</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Spreads</relationshipLabel>
        <relationshipName>Spreads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Include_in_ratios__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is currently not being used</description>
        <label>Include in ratios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. It is populated automatically whenever spreading begins for a Relationship on the Loan. This field specifies the Loan associated with the Spread.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Spreads</relationshipLabel>
        <relationshipName>Spreads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Section_Identifier__c</fullName>
        <description>This field is deprecated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Section Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Identifier__c</fullName>
        <description>This field is optional. This field is populated automatically. It is comprised of the statement type name, a hyphen, and the relationship name. Used to uniquely identify a statement within a bundle.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Template__c</fullName>
        <description>This field is required. It is populated automatically whenever spreading begins for a Relationship on a Loan. This field specifies the Spread Statement Template associated with the Spread.</description>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Spread_Statement_Type__c.LLC_BI__Is_Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
        <relationshipLabel>Spreads</relationshipLabel>
        <relationshipName>Spreads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Underwriting_Summary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. It is populated automatically whenever spreading begins for a Relationship on the Loan. This field specifies the Underwriting Summary associated with the Spread.</description>
        <label>Underwriting Summary</label>
        <referenceTo>LLC_BI__Underwriting_Summary__c</referenceTo>
        <relationshipLabel>Spreads</relationshipLabel>
        <relationshipName>Spreads</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Spread</label>
    <nameField>
        <displayFormat>SPREAD-{000000000}</displayFormat>
        <label>Spread Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spreads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>